# ESP32-Workshop

./: README.md
bare-metal_http_server/: Cargo.toml  README.md  build.rs
bare-metal_http_server/src/: index.html  main.rs
http_server/: .gitignore  Cargo.toml  README.md
http_server/src/: main.rs  style.css
http_server_camera/: .gitignore  Cargo.toml  README.md  sdkconfig.defaults
http_server_camera/patches/esp-idf-svc/src/: tls.rs
http_server_camera/src/: bindings.h  camera.rs  index.html  main.rs  style.css
http_server_playground/: .gitignore  Cargo.toml  README.md  build.rs  sdkconfig.defaults
http_server_playground/.cargo/: config.toml
http_server_playground/components/gamepad_bt/: CMakeLists.txt  bt_default_cfg.c
http_server_playground/src/: index.html  main.rs  mem.rs  style.css
http_server_playground/src/button/: card.html  mod.rs
http_server_playground/src/buzzer/: card.html  mod.rs
http_server_playground/src/display/: card.html  mod.rs
http_server_playground/src/display/basic/: card.html  mod.rs
http_server_playground/src/display/renderer/: mod.rs
http_server_playground/src/display/shader_renderer/: card.html  mod.rs
http_server_playground/src/display/wireframe_renderer/: card.html  mod.rs
http_server_playground/src/gamepad/: card.html  mod.rs
http_server_playground/src/joystick/: card.html  mod.rs
http_server_playground/src/led/: card.html  mod.rs
http_server_playground/src/renderer/: card.html  mod.rs
http_server_playground/src/servo/: card.html  mod.rs
http_server_playground/src/solar/: card.html  mod.rs
http_server_playground/src/ultrasonic/: card.html  mod.rs
http_server_with_camera/: README.md
http_server_with_camera/.cargo/: config.toml
