[package]
name = "http_server"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
embassy-executor = "0.9.0"
embassy-net = { version = "0.7.0", features = [
    "tcp",
    "udp",
    "dns",
    "dhcpv4",
    "medium-ethernet",
] }
embassy-time = "0.5.0"
embedded-io = { version = "0.6.1", default-features = false }
embedded-io-async = "0.6.1"
static_cell = "2.1.0"
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.0", features = [
    "esp32c6",
    "panic-handler",
    "println",
] }
esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32c6"] }
esp-hal = { version = "=1.0.0-rc.1", features = ["esp32c6", "unstable"] }
esp-println = { version = "0.16.0", features = ["esp32c6", "log-04"] }
esp-rtos = { version = "0.1.1", features = [
    "esp32c6",
    "esp-radio",
    "log-04",
    "embassy",
] }
esp-radio = { version = "0.16.0", features = [
    "esp32c6",
    "log-04",
    "smoltcp",
    "unstable",
    "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "medium-ethernet",
    "socket-raw",
] }

[features]
esp32c6 = [
    "esp-backtrace/esp32c6",
    "esp-bootloader-esp-idf/esp32c6",
    "esp-hal/esp32c6",
    "esp-println/esp32c6",
    "esp-rtos/esp32c6",
    "esp-radio/esp32c6",
]

[profile.release]
debug = true
debug-assertions = true
lto = "fat"
codegen-units = 1
