[package]
name = "camera-example"
version = "0.1.2"
edition = "2021"

[dependencies]
log = { version = "0.4", default-features = false }
anyhow = "1.0"
embedded-io = "0.6"

esp-idf-svc = { version = "0.49.1", default-features = false, features = [
    "binstart",
    "std",
] }
esp-idf-sys = { version = "0.35.0" }
esp-idf-hal = { version = "0.44.1" }

[build-dependencies]
embuild = "0.32.0"

# Patch esp-idf-svc to fix char signedness issue
[patch.crates-io]
esp-idf-svc = { path = "patches/esp-idf-svc" }

# Camera component configuration - download from ESP Component Registry
[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp32-camera", version = "2.0" }
bindings_header = "src/bindings.h"
bindings_module = "camera"
