[package]
name = "http_server_playground"
version = "0.1.0"
authors = ["MattSzymonski <mateusz.szymonski@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "http_server_playground"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[patch.crates-io]
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git" }
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git" }

[dependencies]
anyhow = "1"
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
embedded-graphics = "0.8"
embedded-hal = "1.0.0"
embedded-io = "0.6"
libm = "0.2"
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
log = "0.4"
smart-leds = "0.4"
st7735-lcd = "0.10.0"
ws2812-esp32-rmt-driver = { git = "https://github.com/cat-in-136/ws2812-esp32-rmt-smart-leds", features = ["smart-leds-trait"] }

[build-dependencies]
embuild = "0.33"
