[package]
name = "http_server_playground"
version = "0.1.0"
authors = ["MattSzymonski <mateusz.szymonski@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "http_server_playground"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

# Even in dev builds, optimise the renderer hot path (and a few math-heavy crates)
# at -O3 — without this, the software-float inner loop on the ESP32-C6 (no FPU)
# is ~10× slower because LLVM at opt-level="z" disables loop & integer optimisations.
[profile.dev.package.http_server_playground]
opt-level = 3
[profile.dev.package.libm]
opt-level = 3
[profile.dev.package.compiler_builtins]
opt-level = 3

[patch.crates-io]
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git" }
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git" }

[dependencies]
anyhow = "1"
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
embedded-graphics = "0.8"
embedded-hal = "1.0.0"
embedded-io = "0.6"
libm = "0.2"
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
log = "0.4"
smart-leds = "0.4"
st7735-lcd = "0.10.0"
ws2812-esp32-rmt-driver = { git = "https://github.com/cat-in-136/ws2812-esp32-rmt-smart-leds", features = ["smart-leds-trait"] }

[build-dependencies]
embuild = "0.33"

# Tell esp-idf-sys to apply our sdkconfig overrides (the file is otherwise
# silently ignored on some embuild versions when no metadata block is given),
# and to compile the local `gamepad_bt` C component (a 1-function trampoline
# that exposes BT_CONTROLLER_INIT_CONFIG_DEFAULT() to Rust).
[package.metadata.esp-idf-sys]
esp_idf_sdkconfig_defaults = ["sdkconfig.defaults"]
extra_components = [
    { component_dirs = ["components/gamepad_bt"] },
]
